objects/FinServ__Revenue__c.object
<CustomObject>
    <description>Represents data from Financial Services Cloud and external systems to aggregate revenue streams for an advisor’s book of business.</description>
    <fields>
        <fullName>FinServ__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SubType__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Custodian</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{000000000}</displayFormat>
        <label>Revenue Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__AccountOrFinancialAccountRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR (AND(
ISBLANK(FinServ__Account__c),
ISBLANK(FinServ__FinancialAccount__c)
), AND(NOT(ISBLANK(FinServ__Account__c)), NOT(ISBLANK(FinServ__FinancialAccount__c))))</errorConditionFormula>
        <errorMessage>Enter either the Client or the Financial Account for this Revenue source.</errorMessage>
    </validationRules>
</CustomObject>